--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <div class="jumbotron text-center">
         <h1>Pizza Express</h1>
         <h2>Order Your Food Now!</h2>
-        <img src="img/foodimg.jpg" alt="21 Savage Profile Photo">
+        <img class="cheesy" src="img/giphy.gif" alt="cheese pizza">
 
         <p>Login or Signup:</p>
 
